Add basic structure

--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Canvas shake</title>
+  <title>Canvas snake</title>
   <script type="text/javascript" src="./js/script.js"></script>
-  <style link="./css/style.css"></style>
+  <style media="screen">
+    canvas {
+      margin: 0 auto;
+      border: 1px solid red;
+    }
+  </style>
 </head>
 <body>
-  <canvas width="400" height="400"></canvas>
+  <canvas> </canvas>
 </body>
 </html>
